--- a/public/checkout.html
+++ b/public/checkout.html
@@ -48,181 +48,61 @@
     </header>
 
     <main class="checkout-page">
-        <div class="checkout-layout">
-            <!-- 左側訂單摘要 -->
-            <div class="order-sidebar">
-                <div class="order-summary">
-                    <h3>訂單摘要</h3>
-                    <div class="order-items" id="sidebarOrderItems">
-                        <!-- 訂單項目將由 JavaScript 動態添加 -->
-                    </div>
-                    <div class="order-total">
-                        <div class="subtotal">
-                            <span>小計</span>
-                            <span id="sidebarSubtotal">NT$ 0</span>
-                        </div>
-                        <div class="shipping">
-                            <span>運費</span>
-                            <span>NT$ 60</span>
-                        </div>
-                        <div class="total">
-                            <span>總計</span>
-                            <span id="sidebarTotal">NT$ 0</span>
-                        </div>
-                    </div>
+        <div class="checkout-container">
+            <!-- 購物車內容摘要 -->
+            <div class="cart-summary">
+                <h2>訂單摘要</h2>
+                <div id="cartItems" class="cart-items">
+                    <!-- 購物車項目將由 JavaScript 動態添加 -->
+                </div>
+                <div class="cart-total">
+                    <span>總計:</span>
+                    <span id="orderTotal">NT$ 0</span>
                 </div>
             </div>
 
-            <!-- 右側結帳流程 -->
-            <div class="checkout-main">
-                <!-- 步驟指示器 -->
-                <div class="checkout-steps">
-                    <div class="step active" data-step="1">
-                        <div class="step-number">1</div>
-                        <div class="step-title">填寫資料</div>
+            <!-- 結帳表單 -->
+            <form id="checkoutForm" class="checkout-form">
+                <h2>收件資訊</h2>
+                <div class="form-group">
+                    <label for="name">姓名</label>
+                    <input type="text" id="name" name="name" required>
+                </div>
+                <div class="form-group">
+                    <label for="email">電子郵件</label>
+                    <input type="email" id="email" name="email" required>
+                </div>
+                <div class="form-group">
+                    <label for="phone">電話</label>
+                    <input type="tel" id="phone" name="phone" required>
+                </div>
+                <div class="form-group">
+                    <label for="address">收件地址</label>
+                    <input type="text" id="address" name="address" required>
+                </div>
+
+                <h2>付款方式</h2>
+                <div class="payment-methods">
+                    <div class="payment-option">
+                        <input type="radio" id="creditCard" name="paymentMethod" value="creditCard" required>
+                        <label for="creditCard">信用卡付款</label>
                     </div>
-                    <div class="step" data-step="2">
-                        <div class="step-number">2</div>
-                        <div class="step-title">付款方式</div>
-                    </div>
-                    <div class="step" data-step="3">
-                        <div class="step-number">3</div>
-                        <div class="step-title">確認訂單</div>
+                    <div class="payment-option">
+                        <input type="radio" id="transfer" name="paymentMethod" value="transfer">
+                        <label for="transfer">銀行轉帳</label>
                     </div>
                 </div>
 
-                <!-- 結帳步驟內容 -->
-                <div class="checkout-content">
-                    <!-- 步驟一：填寫資料 -->
-                    <div class="checkout-step-content active" id="step1">
-                        <div class="checkout-form">
-                            <h2>收件資訊</h2>
-                            <div class="form-group">
-                                <label for="name">姓名</label>
-                                <input type="text" id="name" required>
-                            </div>
-                            <div class="form-group">
-                                <label for="phone">電話</label>
-                                <input type="tel" id="phone" required>
-                            </div>
-                            <div class="form-group">
-                                <label for="email">電子郵件</label>
-                                <input type="email" id="email" required>
-                            </div>
-                            <div class="form-group">
-                                <label for="address">配送地址</label>
-                                <input type="text" id="address" required>
-                            </div>
-                            <button type="button" class="next-step">下一步</button>
-                        </div>
-                    </div>
-
-                    <!-- 步驟二：付款方式 -->
-                    <div class="checkout-step-content" id="step2">
-                        <div class="checkout-form">
-                            <h2>選擇付款方式</h2>
-                            <div class="payment-methods">
-                                <div class="payment-method">
-                                    <input type="radio" id="credit" name="payment" value="credit">
-                                    <label for="credit">
-                                        <i class="fas fa-credit-card"></i>
-                                        <span>信用卡付款</span>
-                                    </label>
-                                    <div class="payment-check"></div>
-                                </div>
-                                <div class="payment-method">
-                                    <input type="radio" id="transfer" name="payment" value="transfer">
-                                    <label for="transfer">
-                                        <i class="fas fa-university"></i>
-                                        <span>銀行轉帳</span>
-                                    </label>
-                                    <div class="payment-check"></div>
-                                </div>
-                                <div class="payment-method">
-                                    <input type="radio" id="cod" name="payment" value="cod">
-                                    <label for="cod">
-                                        <i class="fas fa-truck"></i>
-                                        <span>貨到付款</span>
-                                    </label>
-                                    <div class="payment-check"></div>
-                                </div>
-                            </div>
-                            <div class="button-group">
-                                <button type="button" class="prev-step">上一步</button>
-                                <button type="button" class="next-step">下一步</button>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- 步驟三：確認訂單 -->
-                    <div class="checkout-step-content" id="step3">
-                        <div class="checkout-form">
-                            <h2>確認訂單資訊</h2>
-                            <div class="confirmation-details">
-                                <div class="customer-info">
-                                    <h3>收件資訊</h3>
-                                    <div id="confirmationInfo"></div>
-                                </div>
-                                <div class="order-summary">
-                                    <h3>訂單摘要</h3>
-                                    <div class="order-items" id="orderItems"></div>
-                                    <div class="order-total">
-                                        <div class="subtotal">
-                                            <span>小計</span>
-                                            <span id="subtotal">NT$ 0</span>
-                                        </div>
-                                        <div class="shipping">
-                                            <span>運費</span>
-                                            <span>NT$ 60</span>
-                                        </div>
-                                        <div class="total">
-                                            <span>總計</span>
-                                            <span id="total">NT$ 0</span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="button-group">
-                                <button type="button" class="prev-step">上一步</button>
-                                <button type="button" class="submit-order">確認訂購</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+                <button type="submit" class="checkout-btn">確認結帳</button>
+            </form>
         </div>
     </main>
 
     <footer>
         <p>&copy; 2024 咖啡香. 版權所有.</p>
     </footer>
+
+    <script src="script.js"></script>
     <script src="checkout.js"></script>
-    <!-- 訂購成功頁面 -->
-    <div class="success-page">
-        <div class="success-content">
-            <i class="fas fa-check-circle"></i>
-            <h2>訂購成功！</h2>
-            <div class="order-info">
-                <p>
-                    訂單編號
-                    <span id="orderNumber"></span>
-                </p>
-                <p>
-                    訂單金額
-                    <span id="orderAmount"></span>
-                </p>
-            </div>
-            <div class="action-buttons">
-                <button onclick="window.location.href='order-tracking.html'">
-                    <i class="fas fa-search"></i>
-                    追蹤訂單狀態
-                </button>
-                <button onclick="window.location.href='index.html'">
-                    <i class="fas fa-home"></i>
-                    返回首頁
-                </button>
-            </div>
-        </div>
-    </div>
 </body>
 </html> 
